--- a/Developpement/templates/stage/stage_recettes.html
+++ b/Developpement/templates/stage/stage_recettes.html
@@ -24,19 +24,19 @@ $(function(){
 <body data-spy="scroll" data-target="#navbar">
   <header>
     <section>
-      <nav id="navbar">
-        <ul class="navbar-nav nav">
+      <nav id="navbar2">
+        <ul id="nav" class="navbar-nav nav">
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Recettes par catégories <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a class="sous_menu" href="#entree">Les Entrées</a></li>
-              <li><a class="sous_menu" href="#plat">Les Plats Principaux</a></li>
-              <li><a class="sous_menu" href="#dessert">Les Desserts</a></li>
+            <ul id="navbar-ul" class="dropdown-menu">
+              <li id="nav-li"><a id="nav-li-a" class="sous_menu" href="#entree">Les Entrées</a></li>
+              <li id="nav-li"><a id="nav-li-a" class="sous_menu" href="#plat">Les Plats Principaux</a></li>
+              <li id="nav-li"><a id="nav-li-a" class="sous_menu" href="#dessert">Les Desserts</a></li>
             </ul>
           </li>
           <li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Recettes par saveurs <span class="caret"></span></a>
-            <ul class="dropdown-menu">
-              <li><a class="sous_menu" href="#sucre">Plats Sucrés</a></li>
-              <li><a class="sous_menu" href="#sel">Plats Salés</a></li>
+            <ul id="navbar-ul" class="dropdown-menu">
+              <li id="nav-li"><a id="nav-li-a" class="sous_menu" href="#sucre">Plats Sucrés</a></li>
+              <li id="nav-li"><a id="nav-li-a" class="sous_menu" href="#sel">Plats Salés</a></li>
             </ul>
           </li>
         </ul>
