--- a/Developpement/templates/stage/stage_partitions.html
+++ b/Developpement/templates/stage/stage_partitions.html
@@ -15,9 +15,32 @@
  </select>
 </div>
 
-<div class="recherche"><button type="button" class="btn btn-default" data-toggle="collapse" data-target=".tableau">Voir les partitions</button></div>
+<div class="recherche"><button type="button" class="btn btn-default" data-toggle="collapse" data-target="#demo">Voir les partitions</button></div>
+  <div id="Niveau1" class="collapse">
+    Lorem ipsum dolor text....
+  </div>
+  <div id="Niveau2" class="collapse">
+    J'ai le Niveau 2
+  </div>
+  <div id="Niveau3" class="collapse">
+    J'ai le Niveau 3
+  </div>
 
-<div id="demo" class="collapse">
-Lorem ipsum dolor text....
-</div>
+<script>
+  if(document.getElementById("sel1").value()=="Niveau 1"){
+    document.getElementById("Niveau1").style.display="";
+    document.getElementById("Niveau2").style.display="None";
+    document.getElementById("Niveau3").style.display="None";
+  }
+  if (document.getElementById("sel1").value()=="Niveau 2") {
+    document.getElementById("Niveau2").style.display="";
+    document.getElementById("Niveau1").style.display="None";
+    document.getElementById("Niveau3").style.display="None";
+  }
+  if (document.getElementById("sel1").value()=="Niveau 3"){
+    document.getElementById("Niveau3").style.display="";
+    document.getElementById("Niveau2").style.display="None";
+    document.getElementById("Niveau1").style.display="None";
+  }
+</script>
 {% endblock %}
