--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -41,53 +41,47 @@
 
             {% if current_user.is_authenticated %}
 
+            <li><a href="/stage/repertoire/">Repertoire</a></li>
+            <li><a href="/stage/partitions/">Partitions</a></li>
+            <li><a href="/stage/souvenirs/">Souvenirs</a></li>
+            <li><a href="/stage/paiement/">Paiement</a></li>
+
+            {% endif %}
+
+          </ul>
+        </li>
+        <li><a class="dropdown-toggle" href="/quatuor/concerts/"><p>Concerts</p></a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p>Autour de la clarinette</p></a>
+          <ul class="dropdown-menu">
+            <li><a href="/autourClarinette/historique/">Historique</a></li>
+            <li><a href="/autourClarinette/informations/">Informations</a></li>
+          </ul>
+        </li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><p>Contact</p></a>
+          <ul class="dropdown-menu">
+            <li><a href="/contact/administratif/">Administratif</a></li>
+            <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
+            <li><a href="/contact/renseignements/">Renseignements</a></li>
+            <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
+            <li><a href="/contact/plaquette/">Plaquette</a></li>
+            <li><a href="/contact/musical/">Musical</a></li>
+          </ul>
+        </li>
+        <li><a class="dropdown-toggle" href="/other/liens/"><p>Liens</p></a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %}
-
-        <li><a href="/stage/repertoire/">Repertoire</a></li>
-        <li><a href="/stage/partitions/">Partitions</a></li>
-        <li><a href="/stage/souvenirs/">Souvenirs</a></li>
-        <li><a href="/stage/paiement/">Paiement</a></li>
-
+        <li><a>{{ current_user.username }}</a></li>
+        <li><a href="/other/deconnexion/"><small><span class="glyphicon glyphicon-log-out"></span></small></a></li>
+        {% else %}
+        <li><a href="/other/connexion/"><small><span class="glyphicon glyphicon-log-in"></span></small></a></li>
         {% endif %}
       </ul>
-    </li>
-    <li><a class="dropdown-toggle" href="/other/concerts/">Concerts</a></li>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Autour de la clarinette <b class="caret"></b></a>
-      <ul class="dropdown-menu">
-        <li><a href="/autourClarinette/historique/">Historique</a></li>
-        <li><a href="/autourClarinette/informations/">Informations</a></li>
-      </ul>
-    </li>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Contact <b class="caret"></b></a>
-      <ul class="dropdown-menu">
-        <li><a href="/contact/administratif/">Administratif</a></li>
-        <li><a href="/contact/mentionsLegales/">Mentions Legals</a></li>
-        <li><a href="/contact/renseignements/">Renseignements</a></li>
-        <li><a href="/contact/ficheTechnique/">Fiche Technique</a></li>
-        <li><a href="/contact/plaquette/">Plaquettte</a></li>
-      </ul>
-    </li>
-    <li class="dropdown">
-      <a href="#" class="dropdown-toggle" data-toggle="dropdown">Administration<b class="caret"></b></a>
-      <ul class="dropdown-menu">
-        <li><a href="/administration/gestionStages/">Gestion des stages</a></li>
-        <li><a href="/administration/gestionStagiaires/">Gestion des stagiaires</a></li>
-        <li><a href="/administration/mailing/">Gestion des mail</a></li>
-
-      </ul>
-    </li>
-
-    <li><a class="dropdown-toggle" href="/other/liens/">Liens</a></li>
-  </ul>
-  {% if current_user.is_authenticated %}
-  <li><a>{{ current_user.username }}</a></li>
-  <li><a href="/other/deconnexion/"><span class="glyphicon glyphicon-log-out"></span></a></li>
-  {% else %}
-  <li id="tab-connect"><a href="/other/connexion/"><span class="glyphicon glyphicon-log-in"></span></a></li>
-  {% endif %}
-</div><!-- /.navbar-collapse -->
+    </div><!--/.nav-collapse -->
+  </div>
+</nav>
 {% endblock %}
 
 
