--- a/Developpement/templates/stage/stage_inscription.html
+++ b/Developpement/templates/stage/stage_inscription.html
@@ -20,48 +20,48 @@
     <div class="row">
       <div class="col-sm-11">
         <form class="form-horizontal" role="form" method="POST" action="{{ url_for('stage_inscription') }}">
-          {{ persForm.hidden_tag() }}
+          {{ iForm.hidden_tag() }}
           <div class="form-group">
-            <label for="nomPers">{{ persForm.nomPers.label }}</label>
-            <div>{{ persForm.nomPers(size=50, class_="form-control",placeholder="Demarest")}}</div>
+            <label for="nomPers">{{ iForm.nomPers.label }}</label>
+            <div>{{ iForm.nomPers(size=50, class_="form-control",placeholder="Demarest")}}</div>
           </div>
           <div class="form-group">
-            <label for="prenomPers">{{ persForm.prenomPers.label }}</label>
-            <div>{{ persForm.prenomPers(size=50, class_="form-control",placeholder="Liam")}}</div>
+            <label for="prenomPers">{{ iForm.prenomPers.label }}</label>
+            <div>{{ iForm.prenomPers(size=50, class_="form-control",placeholder="Liam")}}</div>
           </div>
           <div class="form-group">
-            <label for="dateNPers">{{ persForm.dateNPers.label }}</label>
+            <label for="dateNPers">{{ iForm.dateNPers.label }}</label>
             <div>
-                {{ persForm.dateNPers(size=50, class_="form-control", type="date", id="date")}}
+                {{ iForm.dateNPers(size=50, class_="form-control", type="date", id="date")}}
             </div>
           </div>
           <div class="form-group">
-            <label for="tel1Pers">{{ persForm.tel1Pers.label }}</label>
+            <label for="tel1Pers">{{ iForm.tel1Pers.label }}</label>
             <div>
-                {{ persForm.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                {{ iForm.tel1Pers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
             </div>
           </div>
           <div class="form-group">
-            <label for="mailPers">{{ persForm.mailPers.label }}</label>
+            <label for="mailPers">{{ iForm.mailPers.label }}</label>
             <div>
-                {{ persForm.mailPers(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
+                {{ iForm.mailPers(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
             </div>
           </div>
           <div class="form-group">
-            <label for="ecole">{{ persForm.ecole.label }}</label>
-            <div>{{ persForm.ecole(size=50, class_="form-control",placeholder="Demarest")}}</div>
+            <label for="ecole">{{ iForm.ecole.label }}</label>
+            <div>{{ iForm.ecole(size=50, class_="form-control",placeholder="Demarest")}}</div>
           </div>
           <div class="form-group">
-            <label for="typePratique">{{ persForm.typePratique.label }}</label>
-            <div>{{ persForm.typePratique(size=50, class_="form-control",placeholder="Demarest")}}</div>
+            <label for="typePratique">{{ iForm.typePratique.label }}</label>
+            <div>{{ iForm.typePratique(size=50, class_="form-control",placeholder="Demarest")}}</div>
           </div>
           <div class="form-group">
-            <label for="clarJouees">{{ persForm.clarJouees.label}}</label>
-            <div>{{ persForm.clarJouees(size=100, class_="form-control selectpicker show-tick") }}</div>
+            <label for="clarJouees">{{ iForm.clarJouees.label}}</label>
+            <div>{{ iForm.clarJouees(size=100, class_="form-control selectpicker show-tick") }}</div>
           </div>
           <div class="form-group">
             <label for="usr">Votre Niveau</label>
-            <div>{{ persForm.niveau(class="form-control selectpicker show-tick", option="Niveau 1")}}</div>
+            <div>{{ iForm.niveau(class="form-control selectpicker show-tick", option="Niveau 1")}}</div>
           </div>
         </div>
       </div>
@@ -75,26 +75,26 @@
         <div class="row">
           <div class="col-sm-11">
             <form class="form-horizontal" role="form2" method="POST" action="{{ url_for('stage_inscription') }}">
-              {{ respLegForm.hidden_tag() }}
+              {{ iForm.hidden_tag() }}
               <div class="form-group">
-                <label for="nomResp">{{ respLegForm.nomResp.label }}</label>
-                <div>{{ respLegForm.nomResp(size=50, class_="form-control",placeholder="Demarest")}}</div>
+                <label for="nomResp">{{ iForm.nomResp.label }}</label>
+                <div>{{ iForm.nomResp(size=50, class_="form-control",placeholder="Demarest")}}</div>
               </div>
               <div class="form-group">
-                <label for="prenomResp">{{ respLegForm.prenomResp.label }}</label>
-                <div>{{ respLegForm.prenomResp(size=50, class_="form-control",placeholder="Liam")}}</div>
+                <label for="prenomResp">{{ iForm.prenomResp.label }}</label>
+                <div>{{ iForm.prenomResp(size=50, class_="form-control",placeholder="Liam")}}</div>
               </div>
               <div class="form-group">
-                <label for="adrResp">{{ lieuForm.adrLieu.label }}</label>
-                <div>{{ lieuForm.adrLieu(size=100, class_="form-control",placeholder="16 Rue Victor Hugo")}}</div>
+                <label for="adrResp">{{ iForm.adrLieu.label }}</label>
+                <div>{{ iForm.adrLieu(size=100, class_="form-control",placeholder="16 Rue Victor Hugo")}}</div>
               </div>
               <div class="form-group">
-                <label for="CPResp">{{ lieuForm.CPLieu.label }}</label>
-                {{ lieuForm.CPLieu(size=100, class_="form-control", pattern="(0-9]{5}", placeholder="45000")}}
+                <label for="CPResp">{{ iForm.CPLieu.label }}</label>
+                {{ iForm.CPLieu(size=100, class_="form-control", pattern="(0-9]{5}", placeholder="45000")}}
               </div>
               <div class="form-group">
-                <label for="villeResp">{{ lieuForm.villeLieu.label }}</label>
-                <div>{{ lieuForm.villeLieu(size=50, class_="form-control", placeholder="Orleans")}}</div>
+                <label for="villeResp">{{ iForm.villeLieu.label }}</label>
+                <div>{{ iForm.villeLieu(size=50, class_="form-control", placeholder="Orleans")}}</div>
               </div>
             </div>
           </div>
@@ -103,27 +103,27 @@
           <div class="row">
             <div class="col-sm-11">
               <div class="form-group">
-                <label for="telPers">{{ respLegForm.telPers.label }}</label>
+                <label for="telPers">{{ iForm.telPers.label }}</label>
                 <div>
-                  {{ respLegForm.telPers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                  {{ iForm.telPers(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
                 </div>
               </div>
               <div class="form-group">
-                <label for="telTrav">{{ respLegForm.telTrav.label }}</label>
+                <label for="telTrav">{{ iForm.telTrav.label }}</label>
                 <div>
-                  {{ respLegForm.telTrav(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
+                  {{ iForm.telTrav(size=50, class_="form-control", type="tel", pattern="[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}-[0-9]{2}", placeholder="06-33-59-20-90")}}
                 </div>
               </div>
               <div class="form-group">
-                <label for="mailPers">{{ respLegForm.mailPers.label }}</label>
+                <label for="mailPers">{{ iForm.mailPers.label }}</label>
                 <div>
-                  {{ respLegForm.mailPers(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
+                  {{ iForm.mailPers(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
                 </div>
               </div>
               <div class="form-group">
-                <label for="mailTrav">{{ respLegForm.mailTrav.label }}</label>
+                <label for="mailTrav">{{ iForm.mailTrav.label }}</label>
                 <div>
-                  {{ respLegForm.mailTrav(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
+                  {{ iForm.mailTrav(size=50, class_="form-control", type="email", pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$", placeholder="liam.demarest@orange.fr")}}
                 </div>
               </div>
             </div>
@@ -140,27 +140,27 @@
       <h5>Autorise(nt) l'association DIVERTIMENTO:</h5>
       <div class="form-group">
         <div class="checkbox">
-          <label for="autorAudioPrive">{{ autorSta_mineurForm.autorAudioPrive.label }}
-          {{ autorSta_mineurForm.autorAudioPrive(class_="form-control",type="checkbox", value="",id="check2")}}
+          <label for="autorAudioPrive">{{ iForm.autorAudioPrive.label }}
+          {{ iForm.autorAudioPrive(class_="form-control",type="checkbox", value="",id="check2")}}
         </div>
       </div>
       <div class="form-group">
         <div class="checkbox">
-          <label for="autorImag">{{ autorSta_mineurForm.autorImag.label }}
-          {{ autorSta_mineurForm.autorImag(class_="form-control",type="checkbox", value="",id="check")}}
+          <label for="autorImag">{{ iForm.autorImag.label }}
+          {{ iForm.autorImag(class_="form-control",type="checkbox", value="",id="check")}}
         </div><br>
       </div>
       <h5>Autorise(nt) la diffusion:</h5>
       <div class="form-group">
         <div class="checkbox">
-          <label for="autorAudioPub">{{ autorSta_mineurForm.autorAudioPub.label }}
-          {{ autorSta_mineurForm.autorAudioPub(class_="form-control",type="checkbox", value="",id="check2")}}
+          <label for="autorAudioPub">{{ iForm.autorAudioPub.label }}
+          {{ iForm.autorAudioPub(class_="form-control",type="checkbox", value="",id="check2")}}
         </div>
       </div>
       <div class="form-group">
         <div class="checkbox">
-          <label for="autorImagSite">{{ autorSta_mineurForm.autorImagSite.label }}
-          {{ autorSta_mineurForm.autorImagSite(class_="form-control",type="checkbox", value="",id="check")}}
+          <label for="autorImagSite">{{ iForm.autorImagSite.label }}
+          {{ iForm.autorImagSite(class_="form-control",type="checkbox", value="",id="check")}}
         </div>
       </div>
       <p class="p">Dans le cadre des activités menées au sein du stage et pendant les concerts, des photographies ou des vidéos sur lesquelles vous apparaîtrez pourront être réalisées.
