--- a/Developpement/templates/administration/administration_gestionStagiaires.html
+++ b/Developpement/templates/administration/administration_gestionStagiaires.html
@@ -31,6 +31,7 @@
             <td>{{ stagiaire[3] }}</td>
             <td><a style="color:rgb(0, 0, 0)" href="">{{ stagiaire[4] }}</a></td>
             <td>{{ stagiaire[5] }}</td>
+            <td><a href="/administration/modifierStagiaire/"><input type="submit" id="submit" class="btn btn-default" value="Modifier"></a></td>
           </tr>
 
           {% endfor %}
