--- a/Developpement/templates/administration/administration_gestionStagiaires_stagiaire.html
+++ b/Developpement/templates/administration/administration_gestionStagiaires_stagiaire.html
@@ -5,54 +5,38 @@
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
 <form class="form-horizontal" id="form_login"role="form" method="POST" action="{{ url_for('administration_creerStage') }}">
-  {{ creaStageForm.hidden_tag() }}
+  {{ modifStagiaire.hidden_tag() }}
   <div class="form-group">
-    <label for="nomStage" class="col-sm-3 control-label">{{creaStageForm.intituleSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.intituleSt(size=50, class="form-control", placeholder="Intitule du stage")}}</div>
+    <label for="nomStage" class="col-sm-3 control-label">{{modifStagiaire.nomPers.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.nomPers(size=50, class="form-control", placeholder="Nom du stagiaire")}}</div>
   </div>
   <div class="form-group">
-    <label for="repSt" class="col-sm-3 control-label">{{creaStageForm.repSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.repSt(class="form-control", placeholder="Repertoire du stage")}}</div>
+    <label for="repSt" class="col-sm-3 control-label">{{modifStagiaire.prenomPers.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.prenomPers(class="form-control", placeholder="Prénom du stagiaire")}}</div>
   </div>
   <div class="form-group">
-    <label for="nbPlaces" class="col-sm-3 control-label">{{creaStageForm.nbPlaceSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.nbPlaceSt(size=50, class="form-control", placeholder="Nombre de place")}}</div>
+    <label for="nbPlaces" class="col-sm-3 control-label">{{modifStagiaire.dateNPers.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.dateNPers(size=50, class="form-control", type="date" ,placeholder="YYYY-MM-DD")}}</div>
   </div>
   <div class="form-group">
-    <label for="dateDebSt" class="col-sm-3 control-label">{{creaStageForm.dateDebSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.dateDebSt(size=50, class="form-control", type="date", placeholder="YYYY-MM-DD")}}</div>
+    <label for="dateDebSt" class="col-sm-3 control-label">{{modifStagiaire.tel1Pers.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.tel1Pers(size=50, class="form-control", placeholder="06-41-44-09-99")}}</div>
   </div>
   <div class="form-group">
-    <label for="dateFinSt" class="col-sm-3 control-label">{{creaStageForm.dateFinSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.dateFinSt(size=50, class="form-control", type="date", placeholder="YYYY-MM-DD")}}</div>
+    <label for="dateFinSt" class="col-sm-3 control-label">{{modifStagiaire.mailPers.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.mailPers(size=50, class="form-control", placeholder="liam.demarest@orange.fr")}}</div>
   </div>
   <div class="form-group">
-    <label for="adresseSt" class="col-sm-3 control-label">{{lieuForm.adrLieu.label}}</label>
-    <div class="col-sm-3">{{ lieuForm.adrLieu(size=50, class="form-control", placeholder="Adresse")}}</div>
+    <label for="adresseSt" class="col-sm-3 control-label">{{modifStagiaire.clarJouees.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.clarJouees(size=50, class="form-control", type="select", placeholder="Clarinettes jouées")}}</div>
   </div>
   <div class="form-group">
-    <label for="cpSt" class="col-sm-3 control-label">{{lieuForm.CPLieu.label}}</label>
-    <div class="col-sm-3">{{ lieuForm.CPLieu(size=50, class="form-control", placeholder="Code Postal")}}</div>
+    <label for="cpSt" class="col-sm-3 control-label">{{modifStagiaire.niveau.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.niveau(size=50, class="form-control", type="select", placeholder="Niveau")}}</div>
   </div>
   <div class="form-group">
-    <label for="villeSt" class="col-sm-3 control-label">{{lieuForm.villeLieu.label}}</label>
-    <div class="col-sm-3">{{ lieuForm.villeLieu(size=50, class="form-control", placeholder="Ville")}}</div>
-  </div>
-  <div class="form-group">
-    <label for="descSt" class="col-sm-3 control-label">{{creaStageForm.descSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.descSt(size=50, class="form-control", placeholder="Description du stage ...")}}</div>
-  </div>
-  <div class="form-group">
-    <label for="prixSt" class="col-sm-3 control-label">{{creaStageForm.prixSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.prixSt(size=50, class="form-control", placeholder="XXX,XX")}}</div>
-  </div>
-  <div class="form-group">
-    <label for="tenueSt" class="col-sm-3 control-label">{{creaStageForm.tenueSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.tenueSt(size=50, class="form-control", placeholder="Tenue requise")}}</div>
-  </div>
-  <div class="form-group">
-    <label for="nivRequisSt" class="col-sm-3 control-label">{{creaStageForm.nivRequisSt.label}}</label>
-    <div class="col-sm-3">{{ creaStageForm.nivRequisSt(size=50, class="form-control", placeholder="Niveau requis")}}</div>
+    <label for="villeSt" class="col-sm-3 control-label">{{modifStagiaire.typePratique.label}}</label>
+    <div class="col-sm-3">{{ modifStagiaire.typePratique(size=50, class="form-control", placeholder="Type de pratique")}}</div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-3 col-sm-3">
