continuation modif gestion admin

--- a/Developpement/templates/administration/administration.html
+++ b/Developpement/templates/administration/administration.html
@@ -6,11 +6,10 @@
   <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
 <div>
-   <a href="/administration/gestionFichiers/">Gestion des fichiers</a>
-   <a href="/administration/gestionStagiaires/">Gestion des stagiaires</a>
-   <a href="/administration/creerStage/">Création d'un stage</a>
-   <a href="/administration/gestionStages/">Gestion des stages</a>
-   <a href="/administration/mailing/">Mailing</a>
+   <a class="btn btn-default" href="/administration/gestionFichiers/">Gestion des fichiers</a>
+   <a class="btn btn-default" href="/administration/gestionStagiaires/">Gestion des stagiaires</a>
+   <a class="btn btn-default" href="/administration/gestionStages/">Gestion des stages</a>
+   <a class="btn btn-default" href="/administration/mailing/">Mailing</a>
 </div>
 
 {% endblock %}
