--- a/Developpement/templates/administration/administration_gestionFichiers.html
+++ b/Developpement/templates/administration/administration_gestionFichiers.html
@@ -7,10 +7,9 @@
 </div>
 <div class="stagiaire-all">
   <p> Type de fichiers à modifier </p>
-  <a href="/administration/gestionFichiers/videos"><input type="submit" id="submit" class="btn btn-default" value="Vidéos"></a>
-  <a href="/administration/gestionFichiers/images"><input type="submit" id="submit" class="btn btn-default" value="Images"></a>
-  <a href="/administration/gestionFichiers/textes"><input type="submit" id="submit" class="btn btn-default" value="Textes"></a>
-  <a href="/administration/"><input type="submit" id="submit" class="btn btn-default" value="Retour panneau d'administration"></a>
+  <a href="/administration/gestionFichiers/videos/"><input type="submit" id="submit" class="btn btn-default" value="Vidéos"></a>
+  <a href="/administration/gestionFichiers/images/"><input type="submit" id="submit" class="btn btn-default" value="Images"></a>
+  <a href="/administration/gestionFichiers/articles/"><input type="submit" id="submit" class="btn btn-default" value="Articles"></a>
 </div>
 
 {% endblock %}
