--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -70,6 +70,7 @@
           </ul>
         </li>
         <li><a class="dropdown-toggle" href="/other/liens/"><p>Liens</p></a></li>
+        <li><a class="dropdown-toggle" href="/administration/"><p>Panneau d'administration</p></a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %}
