--- a/Developpement/templates/administration/administration_gestionFichiers_videos.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_videos.html
@@ -25,12 +25,23 @@
             <td>{{ video[0] }}</td>
             <td>{{ video[1] }}</td>
             <td><img href="" alt="test">{{ video[2] }}</td>
-            <td><a href="/administration/modifierStagiaire/"><input type="submit" id="submit" class="btn btn-default" value="Modifier"></a></td>
+            <td>
+              <a href="/administration/modifierStagiaire/" class="btn btn-default">
+                <span class="glyphicon glyphicon-pencil"></span>
+              </a>
+              <a href="" class="btn btn-default">
+                <span class="glyphicon glyphicon-trash"></span>
+              </a>
+            </td>
           </tr>
 
           {% endfor %}
         </tbody>
       </table>
+      <input type="file" id="file1">
+      <button type="button" class="btn btn-default">
+        <i class="icon-upload icon-white"></i> Ajouter
+      </button>
     </div>
 
   </div>
