--- a/Developpement/templates/administration/administration_gestionStages.html
+++ b/Developpement/templates/administration/administration_gestionStages.html
@@ -41,12 +41,22 @@
             <td>{{ stage[10] }}</td>
             <td>{{ stage[11] }}</td>
             <td>{{ stage[12] }}</td>
-            <td><a href="/administration/modifierStage/"><input type="submit" id="submit" class="btn btn-default" value="Modifier"></a></td>
+            <td>
+            <a href="/administration/modifierStage/" class="btn btn-default">
+              <span class="glyphicon glyphicon-pencil"></span>
+            </a>
+            <a href="" class="btn btn-default">
+              <span class="glyphicon glyphicon-trash"></span>
+            </a>
+            </td>
           </tr>
 
           {% endfor %}
         </tbody>
       </table>
+      <a href="/administration/creerStage/" class="btn btn-default">
+        <span class="glyphicon glyphicon-plus"></span>
+      </a>
     </div>
 
   </div>
