--- a/Developpement/templates/administration/administration_gestionFichiers_articles.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_articles.html
@@ -7,8 +7,7 @@
 </div>
 <div class="stagiaire-all">
   <div class="stagiaire-annee">
-    {% for articles in dico_articles %}
-    <h2>{{ articles }}</h2>
+    <h2>Articles</h2>
     <div class="stagiaire-individu table-responsive">
       <table  class="table table-bordered">
         <thead>
@@ -39,7 +38,6 @@
               </a>
             </td>
           </tr>
-          <!-- {% endfor %} -->
         </tbody>
         {% endfor %}
       </table>
@@ -48,7 +46,6 @@
         <i class="icon-upload icon-white"></i> Ajouter
       </button>
     </div>
-    {% endfor %}
   </div>
 </div>
 
