--- a/Developpement/templates/stage/stage_inscription_parental.html
+++ b/Developpement/templates/stage/stage_inscription_parental.html
@@ -72,6 +72,9 @@
           </div>
         </div>
       </div>
+      <div class=form-group>
+        <input type="submit" id="submit" class="btn btn-default" value="Continuer">
+      </div>
     </div>
   </div>
   {% endblock %}
