--- a/Developpement/templates/stage/stage_inscription_basic.html
+++ b/Developpement/templates/stage/stage_inscription_basic.html
@@ -16,7 +16,7 @@
   <div class="container" id="container1">
     <div class="row">
       <div class="col-sm-11">
-        <form class="form-horizontal" role="form" method="POST" action="{{ url_for('stage_inscription') }}">
+        <form class="form-horizontal" role="form" method="POST" ">
           {{ persForm.hidden_tag() }}
           <div class="form-group">
             <label for="nomPers">{{ persForm.nomPers.label }}</label>
