--- a/Developpement/templates/stage/stage_inscription_parental.html
+++ b/Developpement/templates/stage/stage_inscription_parental.html
@@ -17,7 +17,7 @@
     <div class="container" id="container3">
       <div class="row">
         <div class="col-sm-11">
-          <form class="form-horizontal" role="form2" method="POST" action="{{ url_for('stage_inscription') }}">
+          <form class="form-horizontal" role="form2" method="POST">
             {{ respLegForm.hidden_tag() }}
             <div class="form-group">
               <label for="nomResp">{{ respLegForm.nomResp.label }}</label>
