--- a/Developpement/templates/stage/stage_inscription_basic.html
+++ b/Developpement/templates/stage/stage_inscription_basic.html
@@ -60,20 +60,29 @@
             <label for="villeResp">{{ lieuForm.villeLieu.label }}</label>
             <div>{{ lieuForm.villeLieu(size=50, class_="form-control", placeholder="Orleans")}}</div>
           </div>
-          <h4>Information de connection</h4>
+          <h4>Information de connexion</h4>
           <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
           <div class="form-group">
             <label for="username">{{ userForm.username.label }}</label>
             <div>{{ userForm.username(size=50, class_="form-control",placeholder="Nom d'utilisateur")}}</div>
           </div>
+          {% if userError %}
+          <p class="text-danger">Nom d'utilisateur déjà pris</p>
+          {% endif %}
           <div class="form-group">
             <label for="mdp">{{ userForm.mdp.label }}</label>
             <div>{{ userForm.mdp(size=50, class_="form-control",placeholder="Mot de passe")}}</div>
           </div>
+           {% if mdpError %}
+           <p class="text-danger">Les mots de passe ne correspondent pas</p>
+           {% endif %}
           <div class="form-group">
             <label for="mdpConfirm">{{ userForm.mdpConfirm.label }}</label>
             <div>{{ userForm.mdpConfirm(size=50, class_="form-control",placeholder="Confirmation du mot de passe")}}</div>
           </div>
+          {% if mdpError %}
+          <p class="text-danger">Les mots de passe ne correspondent pas</p>
+          {% endif %}
 
           <h4>Expérience</h4>
           <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
