--- a/Developpement/templates/base.html
+++ b/Developpement/templates/base.html
@@ -12,7 +12,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container">
     <div class="navbar-header">
-      <img src="{{ url_for('static',filename='img/clarinette.png')}}"</button>
+        <a href="/quatuor/presentation/"><img id='logo' src="{{ url_for('static', filename='img/diverti.png')}}"/></a>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
