ajout de titres sur inscription_compte

--- a/Developpement/templates/stage/stage_inscription_compte.html
+++ b/Developpement/templates/stage/stage_inscription_compte.html
@@ -15,6 +15,9 @@
     <div class="row">
       <div class="col-sm-11">
         <form class="form-horizontal" role="form" method="POST" >
+          <h4>Information de connexion</h4>
+          <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline2">
+
           {% if userError %}
           <p class="text-danger">Nom d'utilisateur déjà pris</p>
           {% endif %}
