--- a/Developpement/templates/stage/stage_inscription_compte.html
+++ b/Developpement/templates/stage/stage_inscription_compte.html
@@ -42,3 +42,5 @@
   <div class=form-group>
     <input type="submit" id="submit" class="btn btn-default" value="Continuer">
   </div>
+
+  {% endblock %}
