--- a/Developpement/templates/other/connexion.html
+++ b/Developpement/templates/other/connexion.html
@@ -7,6 +7,9 @@
 <img class="underline2" src="{{ url_for('static',filename='img/underline3.png') }}" alt="underline">
 </div>
 <form class="form-horizontal" id="form_login"role="form" method="POST" action="{{ url_for('other_connexion') }}">
+  {% if msg %}
+  <p class="text-info"> Il semblerait que vous ayez déjà un compte. Connectez vous pour finaliser l'inscription</p>
+  {% endif %}
   {{ connectForm.hidden_tag() }}
   <div class="form-group">
     <label for="username" class="col-sm-3 control-label">Nom d'utilisateur</label>
