--- a/Developpement/templates/administration/administration_gestionFichiers_images.html
+++ b/Developpement/templates/administration/administration_gestionFichiers_images.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "administration/administration_gestionFichiers.html" %}
 {% block main %}
 <link rel="stylesheet" href="{{ url_for('static',filename='styles/css/administration/administration_gestionFichiers_images.css')}}">
 <div class="liens">
