ajout des plaquettes de stage. Creation d'un dossier pour celle ci

--- a/Developpement/templates/contact/contact_ficheTechnique.html
+++ b/Developpement/templates/contact/contact_ficheTechnique.html
@@ -9,9 +9,11 @@
     <p>Ici vous pourrez trouvez la fiche technique concernant les concerts du quatuor divertimento</p>
     <embed src="{{ url_for('static',filename='fichier_statique/ficheTechnique.pdf')}}" width=75% height=800em type='application/pdf'/>
     <br>
-    <a href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" download="fichetechnique.pdf"><span class="glyphicon glyphicon-save"></span> Télécharger la fiche technique</a>
+    <a href="{{ url_for('static',filename='fichier_statique/fichetechnique.pdf')}}" download="ficheTechnique.pdf"><span class="glyphicon glyphicon-save"></span> Télécharger la fiche technique</a>
   </div>
 </div>
 <br>
+
+
 
 {% endblock %}
